@@ -1,3 +1,7 @@
+2007-12-03  Geoffrey Garen  <ggaren@apple.com>
+
+        Qt build fix: Get globalExec() from the right place.
+
 2007-11-30  Holger Hans Peter Freyther  <holger.freyther@trolltech.com>
 
         Reviewed by Simon.
